# libmelter

./: BufferDescriptor.h  BufferObserver.cc  BufferObserver.h  CMakeLists.txt  Chunk.cc  Chunk.h  IOAppend.cc  IOAppend.h  IOBuffer.cc  IOBuffer.h  IOComplete.cc  IOComplete.h  IOFlush.cc  IOFlush.h  IOManager.cc  IOManager.h  IOOperation.cc  IOOperation.h  Makefile  Mangler.cc  Mangler.h  Melter.cc  Melter.h  Parser.h  libmelter.doxygen  prototypes.h  version.h.in
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
tests/: BufferDescriptorTest.cc  CMakeLists.txt  ChunkTest.cc  IOBufferTest.cc  IOManagerTest.cc  ManglerTest.cc  MelterTest.cc  Mock.h  ParserTest.cc  main.cc
